fix : cuisines content overflow

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
     padding: 5px;
     margin: 12px;
     background-color: "#f0f0f0";
+    word-wrap:break-word;
 }
 
 .res-card:hover{
